--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "tennisgazelle-porfolio",
   "version": "0.1.0",
+  "homepage": "https://tennisgazelle.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@uiw/react-textarea-code-editor": "^2.0.2",
     "prop-types": "~15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.51.0",
     "styled-components": "~5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -18,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@svgr/cli": "~5.5.0"
+    "@svgr/cli": "~5.5.0",
+    "gh-pages": "^5.0.0"
   }
 }
