--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.51.0",
     "styled-components": "~5.3.0",
+    "use-carousel-hook": "^0.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -46,6 +47,11 @@
   },
   "devDependencies": {
     "@svgr/cli": "~5.5.0",
+    "@types/react": "^18.0.28",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0"
   }
 }
