--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "svgr": "svgr -d src/icons/ src/icons/ --icon --replace-attr-values \"filter=drop-shadow(4px 4px 1px #b71c1c)\"",
     "start": "react-scripts start",
+    "dev": "react-scripts dev",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,11 +48,12 @@
   },
   "devDependencies": {
     "@svgr/cli": "~5.5.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.32.2",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "next": "^10.2.3"
   }
 }
