--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "svgr": "svgr -d src/icons/ src/icons/ --icon --replace-attr-values \"filter=drop-shadow(4px 4px 1px #b71c1c)\"",
     "start": "react-scripts start",
     "dev": "react-scripts dev",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
